# src/routes/multystepform-routes.ts
@@ -1,9 +1,11 @@
 
-import {createUser} from "../controllers/multystepform-controller.js";
+import {createUser , login} from "../controllers/multystepform-controller.js";
+ 
 import express from "express";
 
 const multystepformRouter = express.Router();
 
 multystepformRouter.post("/register",createUser);
+multystepformRouter.post("/login", login)
 
 export default multystepformRouter;
